--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=school-auth
+server.port=8081
+
+spring.datasource.url=jdbc:mysql://localhost:3306/school_db
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+logging.level.org.hibernate=DEBUG
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+spring.jdbc.template.query-timeout=30
+spring.mvc.converters.preferred-json-mapper=gson
+
+#JWT INFO
+jwt.secret=jKYq3yXj8OYwFNhP8tDZ/Nq9rzM3tb1P2TAFpVgZjEw=
+jwt.expiration=3600000
+
+GET_CLASS_WISE_CHART_SP=sp_class_wise_chart
